generator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timestamp-generator
spec:
  selector:
    app: timestamp-generator
  ports:
    - port: 8080
      targetPort: 8080
