generator/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: timestamp_generator
  namespace: timestamp
spec:
  podSelector:
    matchLabels:
      app: timestamp_generator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: timestamp_formatter
      ports:
        - port: 8080
